# ScreenQRReader

./: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: publish.yml
src/: app.tsx  main.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/i18n/: en-US.json  ja-JP.json
src-tauri/icons/: icon.icns
src-tauri/src/: capturer.rs  config.rs  hotkey.rs  i18n.rs  lib.rs  misc.rs  platform.rs  qr_maker.rs  qr_reader.rs  screenshot.rs  tray.rs  updater.rs
src-tauri/src/capturer/: macos.rs  windows.rs
src-tauri/src/screenshot/: mod.rs  windows.rs
src/components/: Icon.tsx  Loading.tsx  QRCode.tsx  QRCodeStatus.tsx
src/components/ui/: Button.tsx  Checkbox.tsx  ImageSelector.tsx  ProgressBar.tsx  Selector.tsx  TextArea.tsx  TextField.tsx
src/hooks/: i18n.tsx
src/libs/: color.ts  qrcode.ts
src/view/: qr_maker.tsx
src/views/: qr_maker.tsx  updater.tsx
src/window/: qr_maker.tsx  updater.tsx
