[package]
name = "ScreenQRReader"
version = "0.1.1"
description = "This application can scan a qr code on the screen."
authors = ["KNSN92"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "screenqrreader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
image = "0.25.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zbar-rust = "0.0.24"
url = "2.5.4"
tempfile = "3.19.1"
tauri = { version = "2.8.5", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-os = "2"
tauri-plugin-http = "2"
tauri-plugin-log = "2"
log = "0.4.27"
anyhow = "1.0.100"
qrcode = "0.14.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

[profile.release]
opt-level = 3
